--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,4 @@
 justin:
   name: Justin Croser
-  email: mail@justincroser.com
+  email: admin@justincroser.me
   url: https://linktr.ee/justincroser
